Fix vertical button alignment when mixing icons

--- a/astroplant-frontend/src/Components/Button.module.css
+++ b/astroplant-frontend/src/Components/Button.module.css
@@ -35,6 +35,7 @@
   cursor: pointer;
   display: inline-flex;
   justify-content: center;
+  vertical-align: bottom;
   align-items: center;
   height: 2.6rem;
   margin: 0 0.2rem;
